--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,33 @@
+[metadata]
+name=pyslurm
+license="GPLv2"
+description="Python Interface for Slurm"
+long_description="file: README.md"
+author="Mark Roberts, Giovanni Torres, et al."
+author_email="pyslurm@googlegroups.com"
+url="https://github.com/PySlurm/pyslurm"
+platforms="Linux"
+keywords="HPC", "Batch Scheduler", "Resource Manager", "Slurm", "Cython"
+packages="pyslurm"
+classifiers=
+    "Development Status :: 5 - Production/Stable"
+    "Environment :: Console"
+    "Intended Audience :: Developers"
+    "Intended Audience :: System Administrators"
+    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)"
+    "Natural Language :: English"
+    "Operating System :: POSIX :: Linux"
+    "Programming Language :: Cython"
+    "Programming Language :: Python"
+    "Programming Language :: Python :: 3"
+    "Programming Language :: Python :: 3.6"
+    "Programming Language :: Python :: 3.7"
+    "Programming Language :: Python :: 3.8"
+    "Programming Language :: Python :: 3.9"
+    "Topic :: Software Development :: Libraries"
+    "Topic :: Software Development :: Libraries :: Python Modules"
+    "Topic :: System :: Distributed Computing"
+
 [aliases]
 doc=build_sphinx
 docs=build_sphinx
@@ -12,6 +42,10 @@ build_requires = python3-devel >= 3.6
                  slurm-devel >= 22.05.0
 requires = slurm
 use_bzip2 = 1
+
+[options.extras_require]
+docs =  sphinx
+        sphinx-multiversion
 
 [build_sphinx]
 builder = man
